Fix: 스웨거 yaml 연결
