# routes/auth.js
@@ -7,54 +7,6 @@ const TokenUtils = require("../utils/tokenUtils");
 const { verifyToken } = require("../middleware/middleware");
 const jwt = require("jsonwebtoken");
 
-/**
- * @swagger
- * /api/auth/signup:
- *   post:
- *     summary: "회원가입"
- *     description: "새로운 사용자를 등록합니다."
- *     tags: [Auth]
- *     requestBody:
- *       description: "사용자의 회원가입 정보를 입력받습니다."
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             type: object
- *             properties:
- *               user_id:
- *                 type: string
- *                 description: "사용자 아이디"
- *                 example: "test_user"
- *               password:
- *                 type: string
- *                 description: "사용자 비밀번호"
- *                 example: "123456"
- *     responses:
- *       "201":
- *         description: "회원가입 성공"
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 message:
- *                   type: string
- *                   example: "회원가입 완료"
- *       "400":
- *         description: "이미 존재하는 아이디"
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 message:
- *                   type: string
- *                   example: "이미 존재하는 아이디입니다."
- *       "500":
- *         description: "서버 오류"
- */
-
 // Signup API
 router.post("/signup", verifyToken, async (req, res) => {
   try {
@@ -104,58 +56,6 @@ router.post("/signup", verifyToken, async (req, res) => {
     res.status(500).json({ message: "서버 오류 발생" });
   }
 });
-
-/**
- * @swagger
- * /api/auth/login:
- *   post:
- *     summary: "로그인"
- *     description: "사용자가 아이디와 비밀번호로 로그인합니다."
- *     tags: [Auth]
- *     requestBody:
- *       description: "사용자의 로그인 정보를 입력받습니다."
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             type: object
- *             properties:
- *               user_id:
- *                 type: string
- *                 description: "사용자 아이디"
- *                 example: "test_user"
- *               password:
- *                 type: string
- *                 description: "사용자 비밀번호"
- *                 example: "123456"
- *     responses:
- *       "200":
- *         description: "로그인 성공"
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 message:
- *                   type: string
- *                   example: "로그인 성공"
- *                 token:
- *                   type: string
- *                   description: "JWT 토큰"
- *                   example: "eyJhbGciOiJIUzI1NiIsInR..."
- *       "400":
- *         description: "잘못된 요청"
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 message:
- *                   type: string
- *                   example: "존재하지 않는 아이디입니다."
- *       "500":
- *         description: "서버 오류"
- */
 
 // Login API
 router.post("/login", async (req, res) => {
@@ -243,28 +143,6 @@ router.post("/refresh", (req, res) => {
     res.status(200).json({ accessToken: newAccessToken });
   });
 });
-
-/**
- * @swagger
- * /api/auth/logout:
- *   post:
- *     summary: "로그아웃"
- *     description: "사용자를 로그아웃합니다."
- *     tags: [Auth]
- *     responses:
- *       "200":
- *         description: "로그아웃 성공"
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 message:
- *                   type: string
- *                   example: "로그아웃 완료"
- *       "500":
- *         description: "서버 오류"
- */
 
 // Logout API
 router.post("/logout", (req, res) => {
